se agregan las funciones y los datos js

--- a/resumen.html
+++ b/resumen.html
@@ -132,7 +132,10 @@
 	
 	
 	
-<div  class="mapa"  id="map" style="position.relative; width:600px;height:450px; margin:5% 0% 0% 10%"></div> 
+<div  class="resumen"  id="" style="position.relative; width:600px;height:450px; margin:5% 0% 0% 10%">
+	<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d63346.90354610174!2d-73.14974061947729!3d7.104956310242837!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x8e681512cdc312b1%3A0x320a1d571f56b9bf!2sUniversidad+Industrial+de+Santander%2C+Ciudad+Universitaria%2C+Cra.+27+%239%2C+Bucaramanga%2C+Santander%2C+Colombia!3m2!1d7.1393384!2d-73.1202364!4m5!1s0x8e683f723638109b%3A0x660df5efd17b9a67!2sCentro+Comercial+Ca%C3%B1averal%2C+Calle+30%2C+Canaveral%2C+Floridablanca%2C+Santander%2C+Colombia!3m2!1d7.0708329999999995!2d-73.106745!5e0!3m2!1ses-419!2ses!4v1472682370911" width="600" height="450" frameborder="0" style="border:10px;" allowfullscreen></iframe>
+	
+</div> 
 
 
 	
