Se conectan paginas

--- a/componente/entrar.html
+++ b/componente/entrar.html
@@ -26,7 +26,7 @@
    <td><input type="text" class="textbox" size="20" placeholder="PASSWORD"></td>
    </tr>
    <td>
-   <input name="b1" value="LOG IN" type="submit" style="width:100pt; height:30pt;color:white; font-size:35pt;font-weight: bold; font-family:verdana;background-color: #2FC147 ; border-radius:5pt;font-size:12pt; border: #2CB042 1px solid;margin:3% 0% 0% 3%"" />
+   <input name="b1" onClick="location.href='inicio.html'" value="LOG IN" type="submit" style="width:100pt; height:30pt;color:white; font-size:35pt;font-weight: bold; font-family:verdana;background-color: #2FC147 ; border-radius:5pt;font-size:12pt; border: #2CB042 1px solid;margin:3% 0% 0% 3%"" /><a href="entrar.html"></a>
    </td>
     <tr> 
    <td>
