--- a/componente/inicio.html
+++ b/componente/inicio.html
@@ -21,10 +21,10 @@
 				<li><a href=""><span class="icon-road"></span>&nbsp;Recorridos </a>
 					<ul class="nav1">
 
-						<li><a href="">Lista de recorridos</a></li>
-						<li><a href="">Mostrar recorridos</a></li>
-						<li><a href="">Perfil topografico</a></li>
-						<li><a href="">Resumen</a><span class=""></span> </a>
+						<li><a href="inicio.html">Lista de recorridos</a></li>
+						<li><a href="mapa.html">Mostrar recorridos</a></li>
+						<li><a href="topografico.html">Perfil topografico</a></li>
+						<li><a href="resumen.html">Resumen</a><span class=""></span> </a>
 						</li>
 					</ul>
 				</li>
