--- a/componente/sesiones.html
+++ b/componente/sesiones.html
@@ -32,7 +32,7 @@
    </table>
    
    </br>
-   <input name="b1" value="REGISTRAR" type="submit" style="width:110pt; height:30pt;color:white; font-size:35pt;font-weight: bold; font-family:verdana;background-color: #2FC147 ; border-radius:5pt;font-size:12pt; border: #2CB042 1px solid;margin:1% 0% 0% -50%"" />
+   <input name="b1"  value="REGISTRAR" type="submit" style="width:110pt; height:30pt;color:white; font-size:35pt;font-weight: bold; font-family:verdana;background-color: #2FC147 ; border-radius:5pt;font-size:12pt; border: #2CB042 1px solid;margin:1% 0% 0% -50%" />
 		<br/>
 	<p style="margin:6% 0% 0% -34%; font-size:12pt;font-weight: bold;">¿Tienes una cuenta?<a href="entrar.html">Entrar</a></p>
     <p style="margin:6% 0% 0% -38%; font-size:12pt;font-weight: bold;">Descarga la Aplicación</p>
